--- a/proyectos.html
+++ b/proyectos.html
@@ -32,10 +32,10 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Proyectos</a>
+                    <a class="nav-link" href="#proyectos">Proyectos</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Nosotros</a>
+                    <a class="nav-link" href="#nosotros">Nosotros</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href= "#">Contacto</a>
@@ -48,26 +48,73 @@
         </div>
       </section>
 
-
-      <section id="projects">
-        <h2 class="title-projects">Proyectos</h2>
+      <section id="proyectos">
+        <h2 class="title-section-light">Proyectos</h2>
         <div class="row project-1">
           <div class="col-lg-6 projects-img">
             <img class="img-projects" src="img/projects-image.svg" alt="">
           </div>
           <div class="col-lg-6 projects-text">
-            <h3 class="name-projects">Sitio Web de Cursos para capacitar capacitadores</h3>
-            <p class="projects-details">
+            <h3 class="subtitle-section-light">Sitio Web de Cursos para capacitar capacitadores</h3>
+            <p class="text-section-light">
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus laudantium nam placeat? Pariatur laborum similique quidem delectus deserunt velit! Natus, quod vel. Tenetur omnis temporibus suscipit at praesentium sint ducimus?
             </p>
 
           </div>
         </div>
         
-
-
       </section>
 
+
+      <section id="nosotros">
+        <h2 class="title-section-dark">Nosotros</h2>
+          <div class="row nosotros-row">
+              <div class="col-lg-5">
+                <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+              </div>
+              <div class="col-lg-7 text-nosotros">
+                <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
+                <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+              </div>
+          </div>
+          <div class="row nosotros-row">
+            <div class="col-lg-5">
+              <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+            </div>
+            <div class="col-lg-7 text-nosotros">
+              <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
+              <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            </div>
+        </div>
+        <div class="row nosotros-row">
+          <div class="col-lg-5">
+            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+          </div>
+          <div class="col-lg-7 text-nosotros">
+            <h3 class="subtitle-section-dark">Fernando José Cabrera Blanco</h3>
+            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+          </div>
+      </div>
+      <div class="row nosotros-row">
+        <div class="col-lg-5">
+          <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+        </div>
+        <div class="col-lg-7 text-nosotros">
+          <h3 class="subtitle-section-dark">Eduardo Antonio Maldonado Guzmán</h3>
+          <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+        </div>
+    </div>
+    <div class="row nosotros-row">
+      <div class="col-lg-5">
+        <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+      </div>
+      <div class="col-lg-7 text-nosotros">
+        <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
+        <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+      </div>
+  </div>
+
+      </section>
 
 </body>
 </html>
