--- a/proyectos.html
+++ b/proyectos.html
@@ -68,23 +68,23 @@
 
       <section id="nosotros">
         <h2 class="title-section-dark">Nosotros</h2>
-          <div class="row nosotros-row">
-              <div class="col-lg-5">
-                <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
-              </div>
-              <div class="col-lg-7 text-nosotros">
-                <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
-                <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
-              </div>
-          </div>
-          <div class="row nosotros-row">
+        <div class="row nosotros-row">
             <div class="col-lg-5">
               <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
             </div>
             <div class="col-lg-7 text-nosotros">
-              <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
+              <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
               <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
             </div>
+        </div>
+        <div class="row nosotros-row">
+          <div class="col-lg-5">
+            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+          </div>
+          <div class="col-lg-7 text-nosotros">
+            <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
+            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+          </div>
         </div>
         <div class="row nosotros-row">
           <div class="col-lg-5">
@@ -94,26 +94,33 @@
             <h3 class="subtitle-section-dark">Fernando José Cabrera Blanco</h3>
             <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
           </div>
-      </div>
-      <div class="row nosotros-row">
-        <div class="col-lg-5">
-          <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
         </div>
-        <div class="col-lg-7 text-nosotros">
-          <h3 class="subtitle-section-dark">Eduardo Antonio Maldonado Guzmán</h3>
-          <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+        <div class="row nosotros-row">
+          <div class="col-lg-5">
+            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+          </div>
+          <div class="col-lg-7 text-nosotros">
+            <h3 class="subtitle-section-dark">Eduardo Antonio Maldonado Guzmán</h3>
+            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+          </div>
         </div>
-    </div>
-    <div class="row nosotros-row">
-      <div class="col-lg-5">
-        <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
-      </div>
-      <div class="col-lg-7 text-nosotros">
-        <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
-        <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
-      </div>
-  </div>
+        <div class="row nosotros-row">
+          <div class="col-lg-5">
+            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+          </div>
+          <div class="col-lg-7 text-nosotros">
+            <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
+            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+          </div>
+        </div>
+      </section>
 
+
+      <section id="contacto">
+
+        <!-- FALTA COMPLETAR -->
+
+        
       </section>
 
 </body>
