--- a/proyectos.html
+++ b/proyectos.html
@@ -122,6 +122,22 @@
 
         
       </section>
+      
+      <footer>
+        <section class="socialMedia">
+            <li id="icons">
+              <a href="https://es-la.facebook.com/heladosultana/">
+                <img src="img/facebook-app-symbol.png" alt="">
+              </a>
+              <a href="https://www.instagram.com/helados.pronto/?hl=es">
+                <img src="img/instagram.png" alt="">
+              </a>
+            </li>
+        </section>
+        <section class="rightsReserved">
+          <h1>Todos los derechos reservados</h1>
+      </section>
 
+      </footer>
 </body>
 </html>
