--- a/proyectos.html
+++ b/proyectos.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#nosotros">Nosotros</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href= "#">Contacto</a>
+                    <a class="nav-link" href= "#contacto">Contacto</a>
                   </li>
                 </ul>
               </div>
@@ -106,19 +106,27 @@
         </div>
         <div class="row nosotros-row">
           <div class="col-lg-5">
-            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+            <img class="img-nosotros" src="img/salvador.jpg" alt= "nosotros-img-1">
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
-            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <p class="text-section-dark">Actualmente tengo 18 años, estoy estudiando la carrera de Ingenieria en Ciencias Computacionales en el Tecnologico de Monterrey, me entuasiasma programar y sobre todo experimentar cosas nuevas, practico Atletismo y Futbol y mi hobby favorito es cocinar.</p>
           </div>
         </div>
       </section>
 
 
       <section id="contacto">
+        <h2 class="title-section-light">Contacto</h2> 
+        <div class = "header">
+        <h3 class="subtitle-section-light">¿Desea seguir en contacto con nosotros?</h3> </div> 
+        <form action="mailto:A00831602@tec.mx?" subject="enlace HTML" class="form" id="form">
+        
 
-        <!-- FALTA COMPLETAR -->
+          <button>¡Contactanos!</button>
+          <i class="fa-solid fa-envelope"></i>
+        </form>
+  
 
         
       </section>
