--- a/proyectos.html
+++ b/proyectos.html
@@ -110,7 +110,7 @@
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
-            <p class="text-section-dark">Actualmente tengo 18 años, estoy estudiando la carrera de Ingenieria en Ciencias Computacionales en el Tecnologico de Monterrey, me entuasiasma programar y sobre todo experimentar cosas nuevas, practico Atletismo y Futbol y mi hobby favorito es cocinar.</p>
+            <p class="text-section-dark">Actualmente tengo 18 años, estoy estudiando la carrera de Ingenieria en Ciencias Computacionales en el Tecnologico de Monterrey, me entusiasma programar y sobre todo experimentar cosas nuevas, practico Atletismo y Futbol y mi hobby favorito es cocinar.</p>
           </div>
         </div>
       </section>
