Añadí mi foto y descripción

--- a/index.html
+++ b/index.html
@@ -97,11 +97,13 @@
         </div>
         <div class="row nosotros-row">
           <div class="col-lg-5">
-            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+            <img class="img-nosotros" src="img/eduardo_maldonado.jpeg" alt="nosotros-img-1">
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Antonio Maldonado Guzmán</h3>
-            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <p class="text-section-dark">
+              Estudiante de 4° semestre del tec de monterrey en la carrera de Ingenieria en Tecnologías Computacionales
+            </p>
           </div>
         </div>
         <div class="row nosotros-row">
@@ -114,12 +116,6 @@
           </div>
         </div>
       </section>
-
-
-
-
-
-
 
       <section id="contacto">
         <h2 class="title-section-light">Contacto</h2> 
