--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
           <div class="col-lg-6 projects-text">
             <h3 class="subtitle-section-light">Sitio Web de Cursos para capacitar capacitadores</h3>
             <p class="text-section-light">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus laudantium nam placeat? Pariatur laborum similique quidem delectus deserunt velit! Natus, quod vel. Tenetur omnis temporibus suscipit at praesentium sint ducimus?
+              Una plataforma Web para capacitar capacitadores adultos mayores y que estos a su vez puedan ofrecer sus cursos a través de la plataforma una vez completado los cursos de aprender a capacitar.
+              <br><br> El propósito del proyecto es que los adultos mayores a través de la plataforma Web puedan ser capaces de aprender a transmitir sus conocimientos con su experiencia en algún área, asimismo, poder ayudar al adulto mayor a poder ofrecer sus cursos de propia elaboración que podrá subir a la plataforma una vez terminado el curso “aprende a capacitar”, y así poder complementar a los conocimientos de los adultos mayores para que sean capaz de difundir sus conocimientos a través de los cursos en la plataforma.
             </p>
 
           </div>
@@ -79,7 +80,7 @@
         </div>
         <div class="row nosotros-row">
           <div class="col-lg-5">
-            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+            <img class="img-nosotros" src="img/lalo.jpeg" alt="nosotros-img-1">
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
@@ -88,7 +89,7 @@
         </div>
         <div class="row nosotros-row">
           <div class="col-lg-5">
-            <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+            <img class="img-nosotros" src="img/fernando.jpeg" alt="nosotros-img-1">
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Fernando José Cabrera Blanco</h3>
