--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <h2 class="title-section-light">Proyectos</h2>
         <div class="row project-1">
           <div class="col-lg-6 projects-img">
-            <img class="img-projects" src="img/projects-image.svg" alt="">
+            <a href="https://www.figma.com/file/iIW0OvqjdEaHKFBXSga7sf/Prototipo?node-id=90%3A805" target="_blank">
+              <img class="img-projects" src="img/projects-image.svg" alt="proyecto-IEPAM">
+            </a>
           </div>
           <div class="col-lg-6 projects-text">
             <h3 class="subtitle-section-light">Sitio Web de Cursos para capacitar capacitadores</h3>
@@ -76,6 +78,9 @@
             <div class="col-lg-7 text-nosotros">
               <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
               <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+              <a target="_blank" href="" class="fa-brands fa-instagram social-media fa-2x"></a>
+              <a target="_blank" href="https://www.linkedin.com/in/emiliano-s%C3%A1nchez-casta%C3%B1eda-b63890161" class="fa-brands fa-linkedin social-media fa-2x"></a>
+              <a target="_blank" href="" class="fa-brands fa-github social-media fa-2x"></a>
             </div>
         </div>
         <div class="row nosotros-row">
@@ -85,6 +90,9 @@
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
             <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <a target="_blank" href="https://www.instagram.com/lalohgz" class="fa-brands fa-instagram social-media fa-2x"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/eduardo-jair-hernández-gómez-6259aa1b0/" class="fa-brands fa-linkedin social-media fa-2x"></a>
+            <a target="_blank" href="https://github.com/LaloHGz" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
         <div class="row nosotros-row">
@@ -94,6 +102,9 @@
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Fernando José Cabrera Blanco</h3>
             <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <a target="_blank" href="https://www.instagram.com/fercabrera__" class="fa-brands fa-instagram social-media fa-2x"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/fernando-cabrera-a438261a3/" class="fa-brands fa-linkedin social-media fa-2x"></a>
+            <a target="_blank" href="https://github.com/FerJCabrera" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
         <div class="row nosotros-row">
@@ -105,6 +116,9 @@
             <p class="text-section-dark">
               Estudiante de 4° semestre del tec de monterrey en la carrera de Ingenieria en Tecnologías Computacionales
             </p>
+            <a target="_blank" href="https://www.instagram.com/eduardo.maldonado2" class="fa-brands fa-instagram social-media fa-2x"></a>
+            <a target="_blank" href="" class="fa-brands fa-linkedin social-media fa-2x"></a>
+            <a target="_blank" href="https://github.com/EduardoMaldonado287" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
         <div class="row nosotros-row">
@@ -114,6 +128,9 @@
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Salvador Alejandro Cisneros Sánchez</h3>
             <p class="text-section-dark">Actualmente tengo 18 años, estoy estudiando la carrera de Ingenieria en Ciencias Computacionales en el Tecnologico de Monterrey, me entusiasma programar y sobre todo experimentar cosas nuevas, practico Atletismo y Futbol y mi hobby favorito es cocinar.</p>
+            <a target="_blank" href="" class="fa-brands fa-instagram social-media fa-2x"></a>
+            <a target="_blank" href="https://www.linkedin.com/in/salvador-alejandro-cisneros-s%C3%A1nchez-1b1483234/" class="fa-brands fa-linkedin social-media fa-2x"></a>
+            <a target="_blank" href="" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
       </section>
@@ -129,11 +146,10 @@
       
       <footer>
         <section id="socialMedia">
-            <i class="fa-brands fa-facebook-f"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin"></i>
-            <i class="fa-brands fa-github"></i>
-            
+          <i class="fa-brands fa-facebook-f"></i>
+          <i class="fa-brands fa-instagram"></i>
+          <i class="fa-brands fa-linkedin"></i>
+          <i class="fa-brands fa-github"></i>
         </section>
 
 
