--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Proyectos</title>
+    <title>Equipo 2</title>
     <link rel="icon" href="favicon.ico?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
 
@@ -73,7 +73,7 @@
         <h2 class="title-section-dark">Nosotros</h2>
         <div class="row nosotros-row">
             <div class="col-lg-5">
-              <img class="img-nosotros" src="img/doodle.jpg" alt="nosotros-img-1">
+              <img class="img-nosotros" src="img/emiliano.jpeg" alt="nosotros-img-1">
             </div>
             <div class="col-lg-7 text-nosotros">
               <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
@@ -138,7 +138,7 @@
       <section id="contacto">
         <h2 class="title-section-light">Contacto</h2> 
         <h3 class="subtitle-section-light contacto-subtitle">¿Desea seguir en contacto con nosotros?</h3>
-        <p class="contacto-text">Envíanos un email para seguir en contacto con nosotros</p>
+        <p class="contacto-text">Envía un email para seguir en contacto con nosotros</p>
         <form action="mailto:A00831602@tec.mx?" subject="enlace HTML" class="form" id="form">
           <button>¡Contactanos!</button>
         </form>      
@@ -146,10 +146,9 @@
       
       <footer>
         <section id="socialMedia">
-          <i class="fa-brands fa-facebook-f"></i>
-          <i class="fa-brands fa-instagram"></i>
-          <i class="fa-brands fa-linkedin"></i>
-          <i class="fa-brands fa-github"></i>
+          <a href="https://www.facebook.com/TecdeMonterrey/" target="_blank" class="fa-brands fa-facebook-f"></a>
+          <a href="https://www.instagram.com/tecdemonterrey/" target="_blank" class="fa-brands fa-instagram"></a>
+          <a href="https://www.linkedin.com/school/tecdemonterrey/" target="_blank" class="fa-brands fa-linkedin"></a>
         </section>
 
 
@@ -157,7 +156,7 @@
           <a href="#">
             <img class="footer-logo" src="img/borregos-mty-dark.png" alt="logo-pagina">
           </a>
-          <span class="derechos-text">© 2022</span>
+          <span class="derechos-text">© Equipo 2 Construcción de Software 2022</span>
         </section>
 
       </footer>
