--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
-            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <p class="text-section-dark">Hola!, soy Lalo, tengo 19 años, soy de Tampico, Tamaulipas, y Actualmente soy estudiante de 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales (ITC) en el Tecnológico de Monterrey Campus Monterrey, me gusta programar, ver series, escuchar música, ver la Fórmula 1, y salir con mis amigos.</p>
             <a target="_blank" href="https://www.instagram.com/lalohgz" class="fa-brands fa-instagram social-media fa-2x"></a>
             <a target="_blank" href="https://www.linkedin.com/in/eduardo-jair-hernández-gómez-6259aa1b0/" class="fa-brands fa-linkedin social-media fa-2x"></a>
             <a target="_blank" href="https://github.com/LaloHGz" class="fa-brands fa-github social-media fa-2x"></a>
