--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             </a>
           </div>
           <div class="col-lg-6 projects-text">
-            <h3 class="subtitle-section-light">Sitio Web de Cursos para capacitar capacitadores</h3>
+            <h3 class="subtitle-section-light">Sitio Web de Cursos para capacitar capacitadores (IEPAM)</h3>
             <p class="text-section-light">
               Una plataforma Web para capacitar capacitadores adultos mayores y que estos a su vez puedan ofrecer sus cursos a través de la plataforma una vez completado los cursos de aprender a capacitar.
               <br><br> El propósito del proyecto es que los adultos mayores a través de la plataforma Web puedan ser capaces de aprender a transmitir sus conocimientos con su experiencia en algún área, asimismo, poder ayudar al adulto mayor a poder ofrecer sus cursos de propia elaboración que podrá subir a la plataforma una vez terminado el curso “aprende a capacitar”, y así poder complementar a los conocimientos de los adultos mayores para que sean capaz de difundir sus conocimientos a través de los cursos en la plataforma.
@@ -77,7 +77,7 @@
             </div>
             <div class="col-lg-7 text-nosotros">
               <h3 class="subtitle-section-dark">Emiliano Sánchez Castañeda</h3>
-              <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+              <p class="text-section-dark">Hola!, soy Emi, me considero un apasionado por la santísima trinidad; tecnología, ciencia y la comida, tengo 20 años, y actualmente soy estudiante de 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales (ITC) en el Tecnológico de Monterrey Campus Monterrey, soy una persona curiosa y metódica.</p>
               <a target="_blank" href="" class="fa-brands fa-instagram social-media fa-2x"></a>
               <a target="_blank" href="https://www.linkedin.com/in/emiliano-s%C3%A1nchez-casta%C3%B1eda-b63890161" class="fa-brands fa-linkedin social-media fa-2x"></a>
               <a target="_blank" href="" class="fa-brands fa-github social-media fa-2x"></a>
@@ -89,7 +89,7 @@
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Jair Hernández Gómez</h3>
-            <p class="text-section-dark">Hola!, soy Lalo, tengo 19 años, soy de Tampico, Tamaulipas, y Actualmente soy estudiante de 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales (ITC) en el Tecnológico de Monterrey Campus Monterrey, me gusta programar, ver series, escuchar música, ver la Fórmula 1, y salir con mis amigos.</p>
+            <p class="text-section-dark">Hola!, soy Lalo, tengo 19 años, soy de Tampico, Tamaulipas, y actualmente soy estudiante de 4to semestre de la carrera de Ingeniería en Tecnologías Computacionales (ITC) en el Tecnológico de Monterrey Campus Monterrey, me gusta programar, ver series, escuchar música, ver la Fórmula 1, y salir con mis amigos.</p>
             <a target="_blank" href="https://www.instagram.com/lalohgz" class="fa-brands fa-instagram social-media fa-2x"></a>
             <a target="_blank" href="https://www.linkedin.com/in/eduardo-jair-hernández-gómez-6259aa1b0/" class="fa-brands fa-linkedin social-media fa-2x"></a>
             <a target="_blank" href="https://github.com/LaloHGz" class="fa-brands fa-github social-media fa-2x"></a>
@@ -114,7 +114,7 @@
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Eduardo Antonio Maldonado Guzmán</h3>
             <p class="text-section-dark">
-              Estudiante de 4° semestre del tec de monterrey en la carrera de Ingenieria en Tecnologías Computacionales
+              Hola!, soy Eduardo, estudiante de 4° semestre del tec de monterrey en la carrera de Ingenieria en Tecnologías Computacionales.
             </p>
             <a target="_blank" href="https://www.instagram.com/eduardo.maldonado2" class="fa-brands fa-instagram social-media fa-2x"></a>
             <a target="_blank" href="" class="fa-brands fa-linkedin social-media fa-2x"></a>
