text section fer

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           </div>
           <div class="col-lg-7 text-nosotros">
             <h3 class="subtitle-section-dark">Fernando José Cabrera Blanco</h3>
-            <p class="text-section-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis illum corporis animi necessitatibus ab atque, voluptate a, consequatur magnam aliquam labore, accusantium obcaecati excepturi quibusdam deserunt sapiente nesciunt dolorum temporibus!</p>
+            <p class="text-section-dark">Hola!, soy Fer, soy de El Salvador, y soy estudiante de 4to semestre de Ingenieria en Tecnologias Computacionales en el Tecnologico de Monterrey. Me gusta hacer ejercicio, cocinar y aprender cosas nuevas.... a veces también me gusta contar mis penas amorosas.</p>
             <a target="_blank" href="https://www.instagram.com/fercabrera__" class="fa-brands fa-instagram social-media fa-2x"></a>
             <a target="_blank" href="https://www.linkedin.com/in/fernando-cabrera-a438261a3/" class="fa-brands fa-linkedin social-media fa-2x"></a>
             <a target="_blank" href="https://github.com/FerJCabrera" class="fa-brands fa-github social-media fa-2x"></a>
