on scroll animation

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </div>
       </section>
 
-      <section id="proyectos">
+      <section id="proyectos" class="reveal">
         <h2 class="title-section-light">Proyectos</h2>
         <div class="row project-1">
           <div class="col-lg-6 projects-img">
@@ -70,8 +70,8 @@
 
 
       <section id="nosotros">
-        <h2 class="title-section-dark">Nosotros</h2>
-        <div class="row nosotros-row">
+        <h2 class="title-section-dark reveal">Nosotros</h2>
+        <div class="row nosotros-row reveal">
             <div class="col-lg-5">
               <img class="img-nosotros" src="img/emiliano.jpeg" alt="nosotros-img-1">
             </div>
@@ -83,7 +83,7 @@
               <a target="_blank" href="" class="fa-brands fa-github social-media fa-2x"></a>
             </div>
         </div>
-        <div class="row nosotros-row">
+        <div class="row nosotros-row reveal">
           <div class="col-lg-5">
             <img class="img-nosotros" src="img/lalo.jpeg" alt="nosotros-img-1">
           </div>
@@ -95,7 +95,7 @@
             <a target="_blank" href="https://github.com/LaloHGz" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
-        <div class="row nosotros-row">
+        <div class="row nosotros-row reveal">
           <div class="col-lg-5">
             <img class="img-nosotros" src="img/fernando.jpeg" alt="nosotros-img-1">
           </div>
@@ -107,7 +107,7 @@
             <a target="_blank" href="https://github.com/FerJCabrera" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
-        <div class="row nosotros-row">
+        <div class="row nosotros-row reveal">
           <div class="col-lg-5">
             <img class="img-nosotros" src="img/eduardo_maldonado.jpeg" alt="nosotros-img-1">
           </div>
@@ -121,7 +121,7 @@
             <a target="_blank" href="https://github.com/EduardoMaldonado287" class="fa-brands fa-github social-media fa-2x"></a>
           </div>
         </div>
-        <div class="row nosotros-row">
+        <div class="row nosotros-row reveal">
           <div class="col-lg-5">
             <img class="img-nosotros" src="img/salvador.jpg" alt= "nosotros-img-1">
           </div>
@@ -135,7 +135,7 @@
         </div>
       </section>
 
-      <section id="contacto">
+      <section id="contacto" class="reveal">
         <h2 class="title-section-light">Contacto</h2> 
         <h3 class="subtitle-section-light contacto-subtitle">¿Desea seguir en contacto con nosotros?</h3>
         <p class="contacto-text">Envía un email para seguir en contacto con nosotros</p>
@@ -144,7 +144,7 @@
         </form>      
       </section>
       
-      <footer>
+      <footer class="reveal">
         <section id="socialMedia">
           <a href="https://www.facebook.com/TecdeMonterrey/" target="_blank" class="fa-brands fa-facebook-f"></a>
           <a href="https://www.instagram.com/tecdemonterrey/" target="_blank" class="fa-brands fa-instagram"></a>
@@ -160,5 +160,7 @@
         </section>
 
       </footer>
+
+      <script src="js/index.js"></script>
 </body>
 </html>
