--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>Equipo 2</title>
     <link rel="icon" href="favicon.ico?v=2">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu:wght@300;400;700&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap" rel="stylesheet">
 
     <!-- CSS Style Sheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -32,6 +34,9 @@
               <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                   <li class="nav-item">
+                    <a class="nav-link" href="#homepage">Inicio</a>
+                  </li>
+                  <li class="nav-item">
                     <a class="nav-link" href="#proyectos">Proyectos</a>
                   </li>
                   <li class="nav-item">
@@ -47,6 +52,21 @@
         
         </div>
       </section>
+
+
+      <section id="homepage">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12">
+              <div class="homepage-content">
+                <h1 class="title-homepage">Bienvenido a nuestra página Web.</h1>
+                <p class="text-section-light">Welcome to our WebSite<br>ITC Gen 2024</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
 
       <section id="proyectos" class="reveal">
         <h2 class="title-section-light">Proyectos</h2>
