footer eliminate reveal

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </form>      
       </section>
       
-      <footer class="reveal">
+      <footer>
         <section id="socialMedia">
           <a href="https://www.facebook.com/TecdeMonterrey/" target="_blank" class="fa-brands fa-facebook-f"></a>
           <a href="https://www.instagram.com/tecdemonterrey/" target="_blank" class="fa-brands fa-instagram"></a>
