--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 
       </footer>
 
-      <script src="js/index.js"></script>
+      <!-- Reveal Script -->
+      <script src="js/reveal.js"></script>
 </body>
 </html>
