--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- CSS Style Sheets -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/animation.css">
 
     <!-- Bootstrap Scripts -->  
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
@@ -179,6 +180,32 @@
 
       </footer>
 
+
+       <!-- section for animations  start-->
+     <div class="intro">
+      <div class="intro-text">
+        <!-- inserted -->
+        <div class="wrapper" id="wrapper">
+          <div class="typing-demo" id="typing-demo"> 
+            <h1 class= "hide" id="hide-typingEsp" > Consultoría digital</h1 > 
+            <br>
+            <h1 class= "hide" id="hide-typingFran"> Digital consulting  </h1> 
+          </div>
+      </div>
+      <!-- inserted -->
+      </div>
+    </div>
+      <!-- section for animations ends -->
+
+
+      <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"
+      integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ=="
+      crossorigin="anonymous"
+    ></script>
+
+      <script src="js/animation.js"></script>
       <script src="js/index.js"></script>
+      
 </body>
 </html>
